// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extension Manager can successfully fetch items 1`] = `
[
  [
    {
      "error": null,
      "isFetching": false,
      "news": [
        {
          "title": "rss item 1",
        },
        {
          "title": "rss item 2",
        },
      ],
    },
  ],
]
`;

exports[`Extension Manager can successfully fetch items 2`] = `
[
  [
    "isFetching",
    true,
  ],
  [
    "news",
    [
      {
        "title": "rss item 1",
      },
      {
        "title": "rss item 2",
      },
    ],
  ],
  [
    "isFetching",
    false,
  ],
  [
    "error",
    null,
  ],
]
`;

exports[`Extension Manager throws an error if channel wasn't found 1`] = `
[
  [
    {
      "error": "Channel "foobar" not found, available channels are barfoo, somethingElse",
      "isFetching": false,
      "news": [],
    },
  ],
]
`;

exports[`Extension Manager throws an error if channel wasn't found 2`] = `
[
  [
    "isFetching",
    true,
  ],
  [
    "channel",
    "barfoo",
    true,
  ],
  [
    "isFetching",
    false,
  ],
  [
    "error",
    "Channel "foobar" not found, available channels are barfoo, somethingElse",
  ],
]
`;
